--- a/www/builder/sources/controls/Select/Select.template
+++ b/www/builder/sources/controls/Select/Select.template
@@ -1,11 +1,11 @@
-<div class="app-select {~className?~className} {$active?'active'}" scope>
-	<div class="app-select-value" onClick="onClick">
+<div class="@ {~className?~className} {$active?'->>active'}" scope>
+	<div class="@value" onClick="onClick">
 		{$title}
 		<include templ="tooltip" if="{~tooltip}" className="question-tooltip" key="{$tooltip}">
 	</div>
-	<div class="app-select-options" onClick="onOptionsClick">
+	<div class="@options" onClick="onOptionsClick">
 		{foreach $options as &option}
-			<div class="app-select-option" data-value="{&option.value}">
+			<div class="@option" data-value="{&option.value}">
 				{&option.title}
 				<include templ="tooltip" if="{&option.tooltip}" className="question-tooltip" key="{&option.tooltip}">
 			</div>
