--- a/www/builder/sources/controls/Tags/KeywordTags/ContainKeywordTags/ContainKeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/ContainKeywordTags/ContainKeywordTags.template
@@ -1,10 +1,12 @@
+{namespace .Tags}
+
 {template .topContent}
-<div class="app-tags-top">
-	<span class="app-tags-select-button" data-index="1">
+<div class="@top">
+	<span class="@select-button" data-index="1">
 		{$opt1}
 		<component class="PopupSelect" cmpid="opt1" arg-options="{#wordOrderOptions}" title="{@wordOrder}" onChange="onChangeOption">
 	</span>
-	<span class="app-tags-select-button" data-index="2">
+	<span class="@select-button" data-index="2">
 		{$opt2}
 		<component class="PopupSelect" cmpid="opt2" arg-options="{#wordDistanceOptions}" title="{@wordDistance}" onChange="onChangeOption">
 	</span>
