--- a/www/builder/sources/views/Main/FilterSubscriptionOptions/FilterSubscriptionOptions.template
+++ b/www/builder/sources/views/Main/FilterSubscriptionOptions/FilterSubscriptionOptions.template
@@ -1,11 +1,11 @@
-<div class="app-subscription-options" scope>
-	<div class="app-subscription-option">
+<div class="@" scope>
+	<div class="@option">
 		<include templ="checkbox" name="tenderOfFavorite" checked="{$opts.tenderOfFavorite}"> {@notifyMe} <b>{@favTenderChange}</b>
 	</div>
-	<div class="app-subscription-option">
+	<div class="@option">
 		<include templ="checkbox" name="protocolOfFavorite" checked="{$opts.protocolOfFavorite}"> {@notifyMe} <b>{@protocolChange}</b>
 	</div>
-	<div class="app-subscription-option">
+	<div class="@option">
 		<include templ="checkbox" name="protocolOfFilter" checked="{$opts.protocolOfFilter}"> {@notifyMe} <b>{@newProtocols}</b>
 	</div>
 </div>
