--- a/www/builder/sources/components/FilterStatistics/FilterStatistics.template
+++ b/www/builder/sources/components/FilterStatistics/FilterStatistics.template
@@ -1,11 +1,11 @@
-<div class="app-filter-stat {~className}" scope>
-	<div class="app-filter-stat-title">
+<div class="@ {~className}" scope>
+	<div class="@title">
 		{~title}
-		<div class="app-filter-stat-refresh" eid="rb">
+		<div class="@refresh" eid="rb">
 			{@refresh}
 		</div>
 	</div>	
-	<table class="app-filter-stat-head" cellpadding="0" cellspacing="0">
+	<table class="@head" cellpadding="0" cellspacing="0">
 		<tr>
 			<th>{@name}</th>
 			<th>{@forToday}</th>
@@ -17,10 +17,12 @@
 			{/if}
 		</tr>
 	</table>
-	<div class="app-filter-stat-content">
+	<div class="@content">
 		{foreach $filters as &filter}
-			<div class="app-filter-stat-row row{&filter['filterId']}">
-				<span class="app-filter-stat-row-name">{&filter['header']}</span>
+			<div class="@row row{&filter['filterId']}">
+				<span class="@row-name">
+					{&filter['header']}
+				</span>
 				<span>+{::today=0}</span>
 				<span>+{::yesterday=0}</span>
 				<span>{::current=0}</span>
