--- a/www/builder/sources/components/SearchForm/controls/keywords/Keywords.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/Keywords.template
@@ -1,18 +1,18 @@
-<div class="app-keywords-options">
+<div class="@options">
 	<span class="bold">{@tofind}</span>
 	<control class="Select" name="nonmorph" options="{#keywordsNonMorphOptions}" arg-className="frameless" arg-tooltip="true">
 	<span class="bold">{@in}</span>
 	<control class="Checkbox" name="searchInDocumentation" args="{#docCheckboxOptions}">
 	<control class="Checkbox" name="registryContracts" args="{#contCheckboxOptions}">
 	<control class="Checkbox" name="registryProducts" args="{#prodCheckboxOptions}">
-	<div class="app-keywords-add-request">
+	<div class="@add-request">
 		<span>{@addRequest}</span>
 		<include templ="tooltip" className="question-tooltip" key="keywordsNewReq">
 	</div>
 	<div class="app-tooltip keywords-hint"/>
 </div>
 <component class="Tabs" items="{$tabs}" activeTab="{$activeTab}" cmpid="tabs" onSelect="onSelectTab" onRemove="removeRequest">
-<div class="app-keywords-area{$keywordsCount>1?' multi'}" eid="area">
+<div class="@area{$keywordsCount>1?' multi'}" eid="area">
 	{foreach $keywords as &item}
 		<control class="KeywordsControl" name="tags" arg-items="{&item}" onEdit="onTagEdit">
 	{/foreach}
