--- a/www/builder/sources/ui/Dialog/Dialog.template
+++ b/www/builder/sources/ui/Dialog/Dialog.template
@@ -1,16 +1,16 @@
 {template .main}
-<div class="app-dialog-mask {$shown?'shown'}" onClick="close"></div>
-<div class="app-dialog{$expanded?' expanded'}{$shown?' shown'}" scope style="width:{$width}px;margin-left:{$marginLeft};margin-top:{$marginTop};">
+<div class="@mask {$shown?'->>shown'}" onClick="close"/>
+<div class="@ {$expanded?'->>expanded'} {$shown?'->>shown'}" style="width:{$width}px;margin-left:{$marginLeft};margin-top:{$marginTop};" scope>
 	{if ~closable}
-		<div class="app-dialog-close" onClick="close"></div>
+		<div class="@close" onClick="close"/>
 	{/if}
 	{if ~expandable}
-		<div class="app-dialog-expand" onClick="expand"></div>
+		<div class="@expand" onClick="expand"/>
 	{/if}
-	<div class="app-dialog-title">
+	<div class="@title">
 		{$title}
 	</div>
-	<div class="app-dialog-content" style="{$height?'max-height:'+$height+'px;'}">
+	<div class="@content" style="{$height?'max-height:'+$height+'px;'}">
 		<template templ="content">
 	</div>
 </div>
