--- a/www/builder/sources/ui/FormField/FormField.template
+++ b/www/builder/sources/ui/FormField/FormField.template
@@ -1,6 +1,6 @@
-<div class="app-input-container{~class?' '+~class}" scope>
+<div class="input-container{~class?' '+~class}" scope>
 	{if ~caption}
-		<div class="app-input-caption">
+		<div class="input-caption">
 			{~caption}
 		</div>
 	{/if}
