--- a/www/builder/sources/components/SearchForm/controls/SearchFormButton/SearchFormButton.template
+++ b/www/builder/sources/components/SearchForm/controls/SearchFormButton/SearchFormButton.template
@@ -1,3 +1,5 @@
-<div class="app-search-form-button {~className}">
+{namespace .SearchForm}
+
+<div class="@button {~className}">
 	<template templ="content">
 </div>
