template callings content

--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,4 +1,9 @@
+{template .main}
 <div class="@outer-container">
-	<component class="DataTableTabPanel">
+	<component class="DataTableTabPanel" />
 	{$::aaa}
+	<:aaaa a="HELLO"/>
 </div>
+
+{template .aaaa}
+{~a}
