--- a/www/builder/sources/components/DataTable/Rows/DataTableRow.template
+++ b/www/builder/sources/components/DataTable/Rows/DataTableRow.template
@@ -1,7 +1,7 @@
 {template .controls}
 <div class="app-datatable-color-mark datatable-control"></div>	
 <div class="app-datatable-checkbox-container datatable-control">
-	<include templ="checkbox">
+	<::checkbox/>
 </div>
 <div class="app-datatable-star datatable-control"></div>
 
