--- a/www/builder/sources/components/SearchForm/SearchForm.template
+++ b/www/builder/sources/components/SearchForm/SearchForm.template
@@ -5,7 +5,7 @@
 	</div>
 	<div class="@close-side" onClick="!expand"/>
 	<div class="@close" onClick="!expand"/>
-	<template templ="content">
+	<:content/>
 </div>
 
 {template .reset}
