--- a/www/builder/sources/ui/Editor/Editor.template
+++ b/www/builder/sources/ui/Editor/Editor.template
@@ -4,5 +4,5 @@
 	<div class="@title">
 		{@editing}
 	</div>
-	<component class="AutoComplete" opts="{#keywordsAutoCompleteOptions}" active="{$withAutoComplete}" onEnter="onEnter">
+	<component class="AutoComplete" opts="{#keywordsAutoCompleteOptions}" active="{$withAutoComplete}" onEnter="onEnter"/>
 </div>
