--- a/www/builder/sources/ui/AutoComplete/AutoComplete.template
+++ b/www/builder/sources/ui/AutoComplete/AutoComplete.template
@@ -1,11 +1,11 @@
 {template .main}
 <div class="@ input-container" scope>
 	<input type="text" placeholder="{~placeholder}" eid="input">
-	<template templ="content">
+	<:content/>
 	<div class="@variants{$active?' shown'}" eid="variants">
 		<div class="@variants-inner">
 			{foreach $variants as &i => &variant}
-				<template templ="variant" data="{&variant}" index="{&i}">
+				<:variant data="{&variant}" index="{&i}"/>
 			{/foreach}
 		</div>
 	</div>
