--- a/www/builder/sources/views/Error401/Error401.template
+++ b/www/builder/sources/views/Error401/Error401.template
@@ -1,5 +1,5 @@
 {template .main}
 	<div class="app-auth-form-container">
-		<form class="AuthForm">
+		<form class="AuthForm"/>
 	</div>
 {/template}
