--- a/www/builder/sources/views/Main/FilterSubscription/FilterSubscription.template
+++ b/www/builder/sources/views/Main/FilterSubscription/FilterSubscription.template
@@ -26,7 +26,7 @@
 						<span class="@filter">{&filter['header']}</span>
 					</td>
 					<td>
-						<control class="Select" name="freqSubs" options="{#subscrFreqOptions}" value="{&filter['freqSubs']}" onChange="onFreqChange">
+						<control class="Select" name="freqSubs" options="{#subscrFreqOptions}" value="{&filter['freqSubs']}" onChange="onFreqChange"/>
 					</td>
 					<td>
 						<div class="@button {&filter['isSubs']==1?@greenButton+' ->>subscribed':@whiteButton}"></div>
